# python-backend-crud

./: .env  .gitignore  Run.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_agent_fields.py  003_consent_text_input.py  004_ext_permission.py  005_drop_user_permission.py  006_drop_user_sync_emp_no.py
app/: __init__.py  main.py
app/core/: auth.py  config.py  database.py  dependencies.py  exceptions.py  schemas.py
app/domains/: __init__.py
app/domains/agent/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/approval/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/common/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/user/: models.py  repository.py  router.py  schemas.py  service.py
app/models/: __init__.py  base.py
tests/: conftest.py  test_agent.py  test_approval.py  test_auth.py  test_common.py  test_user.py
